[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = true
repository = "https://github.com/sovereign-labs/risc0-cycle-macros"

[workspace.dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "89bca7403a7563240eeb4a39a336ea71417ff05a", default-features = false }
risc0-zkvm-platform = { git = "https://github.com/risc0/risc0.git", rev = "89bca7403a7563240eeb4a39a336ea71417ff05a", features = ["export-syscalls"], default-features = false }
