[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = true
repository = "https://github.com/Sovereign-Labs/risc0-cycle-macros"

[workspace.dependencies]
risc0-zkvm = { version = "1.2", default-features = false }
risc0-zkvm-platform = { version = "1.2", features = ["export-syscalls"], default-features = false }

sp1-lib = { version = "3.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["std", "critical-section"] }
