[package]
name = "risc0-cycle-utils"
authors = { workspace = true }
description = "Utilities for counting risc0 VM cycles consumed by functions"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
autotests = false

[dependencies]
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
risc0-zkvm-platform = { workspace = true }

[features]
default = []
native = ["risc0-zkvm/prove"]
