[package]
name = "sov-cycle-utils"
authors = { workspace = true }
description = "Utilities for counting risc0 VM cycles consumed by functions"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
autotests = false

[dependencies]
sp1-sdk = { workspace = true, default-features = false, optional = true }
sp1-zkvm = { workspace = true, default-features = false, optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = [
	"std",
], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }

[features]
default = ["risc0"]
risc0 = ["dep:risc0-zkvm", "dep:risc0-zkvm-platform"]
sp1 = ["dep:sp1-sdk", "dep:sp1-zkvm"]
native = ["risc0-zkvm/prove"]
