[package]
name = "sov-cycle-utils"
authors = { workspace = true }
description = "Utilities for counting risc0 VM cycles consumed by functions"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
autotests = false

[dependencies]
sp1-sdk = { workspace = true, default-features = false, optional = true }
sp1-lib = { workspace = true, default-features = false, optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = [
	"std",
], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }
sov-cycle-macros = { path = "../sov-cycle-macros", optional = true }
once_cell = { workspace = true, features = [
    "alloc",
]  }

[features]
default = ["macros"]
macros = ["dep:sov-cycle-macros"]
risc0 = ["dep:risc0-zkvm", "dep:risc0-zkvm-platform"]
sp1 = ["dep:sp1-sdk", "dep:sp1-lib"]
native = ["risc0-zkvm/prove"]
